--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -16,6 +16,22 @@
   
   
   <body>
+    <div class="loader__others">
+      <div class="lds-default">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <header>
       <nav>
         <div class="container">
