--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -12,6 +12,22 @@
     />
   </head>
   <body>
+    <div class="loader__others">
+      <div class="lds-default">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <header>
       <nav>
         <div class="container">
