--- a/src/pages/people.html
+++ b/src/pages/people.html
@@ -11,6 +11,22 @@
 </head>
 
 <body>
+  <div class="loader__others">
+    <div class="lds-default">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   <header>
     <nav>
       <div class="container">
