--- a/src/pages/tv.html
+++ b/src/pages/tv.html
@@ -13,6 +13,22 @@
     />
 </head>
 <body>
+  <div class="loader__others">
+    <div class="lds-default">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   <header>
     <nav>
       <div class="container">
