finished actor page

--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -163,16 +163,21 @@
         </div>
       </div>
     </section>
-    <section class="actor__details">
-      <div class="container">
-        <div class="actor"></div>
-      </div>
-    </section>
+    
     <section>
       <div class="container">
         <div class="row actor__cards">
           <div class="col actor__img__wrapper"></div>
-          <div class="col actor__wrapper"></div>
+          <div class="col actor__wrapper">
+            <div class="actor__title"></div>
+            <div class="actor__text"></div>
+            <p class="actor__known">Known For</p>
+            <div class="row cast__films"></div>
+            <div class="acting__wrepper"></div>
+            <div class="container crew__container">
+              <div class="crew__films"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
