--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -95,7 +95,7 @@
               <input
                 name="title"
                 type="text"
-                placeholder="Найти фильм, сериал, персону......"
+                placeholder="Search for a movie, tv show, person......"
                 value=""
                 class="search_input"
               />
