--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -84,42 +84,10 @@
         <div class="container">
           <div class="movie__wrapper">
             <div class="serch__detail">
-               <div class="main">
-                 <div class="result">
-                    <h3>Search results</h3>
-                 </div>
-                 <div class="just__one">
-                   <p>Movies</p>
-                   <p>119</p>
-                 </div>
-                 <div class="just">
-                  <p>TV shows</p>
-                  <p>119</p>
-                </div>
-                <div class="just">
-                  <p>People</p>
-                  <p>119</p>
-                </div>
-                <div class="just">
-                  <p>Companies</p>
-                  <p>119</p>
-                </div>
-                <div class="just">
-                  <p>Keyword</p>
-                  <p>119</p>
-                </div>
-                <div class="just">
-                  <p>Collection</p>
-                  <p>119</p>
-                </div>
-                <div class="just">
-                  <p>Networks</p>
-                  <p>119</p>
-                </div>
-
-
-                 
-               </div>
+              <div class="main__search">
+              </div>
+              <div class="main__searchpage">
+              </div> 
             </div>
             <div class="serch__detail_col">
               <div class="movies__wrappe">
