added same remove errors profile page

--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -118,7 +118,11 @@
           <div class="results__col-search">
 
           </div>
+
+          
         </div>
+        <button class="next__pagination">Next</button>
+        <button>Prew</button>
       </div>
     </section>
 
