--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -132,10 +132,10 @@
                     id="release_date.gte"
                   />
                 </div>
-                <div>
+                <div class="icons__movies">
                   <p>to</p>
                   <input
-                    class="date__icons"
+                    class="dates_icons"
                     type="date"
                     name="release_date.lte"
                     id="release_date.lte"
