--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -124,7 +124,7 @@
                 ></ul>
 
                 <div class="icons__movies">
-                  <p>form</p>
+                  <p>Form</p>
                   <input
                     class="date__icons"
                     type="date"
@@ -133,7 +133,7 @@
                   />
                 </div>
                 <div class="icons__movies">
-                  <p>to</p>
+                  <p>To</p>
                   <input
                     class="dates_icons"
                     type="date"
