--- a/src/pages/tvsearch.html
+++ b/src/pages/tvsearch.html
@@ -123,13 +123,19 @@
                   name="with_genres"
                 ></ul>
 
-                <div>
+                <div class="icons__movies">
+                  <p>Form</p>
                   <input
+                    class="date__icons"
                     type="date"
                     name="release_date.gte"
                     id="release_date.gte"
                   />
+                </div>
+                <div class="icons__movies">
+                  <p>To</p>
                   <input
+                    class="dates_icons"
                     type="date"
                     name="release_date.lte"
                     id="release_date.lte"
