i didn't add pagination

--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -119,10 +119,17 @@
 
           </div>
 
-          
         </div>
-        <button class="next__pagination">Next</button>
-        <button>Prew</button>
+      </div>
+    </section>
+
+    <section class="pagination__wrapper"> 
+      <div class="container">
+        <div class="pagination">
+          <div class="page disabled" id="prev">Previus Page</div>
+          <div class="current" id="current">1</div>
+          <div class="page" id="next">Next Page</div>
+        </div>
       </div>
     </section>
 
