--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -104,30 +104,21 @@
             <div class="search__pagehgh">
               <h1 class="title__search">Search Results</h1>
 
-              <div class="count__results">
-              </div>
-              <div class="page__results">
-                
-              </div>
-              <div class="page__results-see">
-                
-              </div>
+              <div class="count__results"></div>
+              <div class="page__results"></div>
+              <div class="page__results-see"></div>
             </div>
-
           </div>
-          <div class="results__col-search">
-
-          </div>
-
+          <div class="results__col-search"></div>
         </div>
       </div>
     </section>
 
-    <section class="pagination__wrapper"> 
+    <section class="pagination__wrapper">
       <div class="container">
         <div class="pagination">
           <div class="page disabled" id="prev">Previus Page</div>
-          <div class="current" id="current">1</div>
+          <ul class="pagination__list"></ul>
           <div class="page" id="next">Next Page</div>
         </div>
       </div>
