--- a/src/pages/people.html
+++ b/src/pages/people.html
@@ -101,6 +101,14 @@
   </div>
   </section>
 
+  <section class="pagination__wrapper">
+    <div class="container">
+      <div class="pagination">
+        <ul class="pagination__list"></ul>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <article class="footer">
       <div class="join">
