--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -86,17 +86,16 @@
       <div class="container searchContainer">
         <div class="searchKeywords">
           <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-          <form class="searchKeywordsForm" >
+          <form class="searchKeywordsForm">
             <input
               name="title"
               type="text"
-              placeholder="Search for a movie, tv show, person......"
+              placeholder="Найти фильм, сериал, персону..."
               value=""
               class="searchKeywordsInput"
             />
           </form>
         </div>
-        <i class="fa-solid fa-xmark cancelSearch"></i>
         <div class="searchKeywords_data container">
           <ul class="searchKeywords_data__ul"></ul>
         </div>
