added home page like and watchlist

--- a/src/pages/people.html
+++ b/src/pages/people.html
@@ -94,7 +94,7 @@
   </header>
   <section>
     <div class="container">
-      <h1>Популярные люди</h1>
+      <h1 class="popular__people-size">Popular People</h1>
       <div class="people">
 
     </div>
